fixing the color scheme and the line spacing fromt he h2 tags

--- a/src/scss/calculatorpage.scss
+++ b/src/scss/calculatorpage.scss
@@ -7,6 +7,10 @@ span {
   color: white;
 }
 
+// html {
+//   color-scheme: dark light;
+// }
+
 button {
   background-color: $teal_color;
   border: none;
@@ -37,11 +41,12 @@ button {
   }
 
   .attachment-grid {
-    border-top: 2px dashed rgba($color: $teal_color, $alpha: 1);
+    border-top: 1px solid rgba($color: $teal_color, $alpha: 1);
     margin: 7px 0 1.5em 0;
+    padding-top: 0.35rem;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
 
     label {
       border-radius: 5px;
@@ -49,9 +54,10 @@ button {
       display: inline-block;
 
       input[type="radio"] {
+        color-scheme: dark light;
         display: hidden;
         padding-top: 2px;
-        scale: 1.25;
+        scale: 1.15;
         width: fit-content;
         position: relative;
         transition: transform 1s ease-in-out;
@@ -76,18 +82,20 @@ button {
       .separator {
         font-size: 24px;
         margin: 0 10px;
-        pointer-events: none !important;
         display: inline-block;
+        color: rgba($color: $teal_color, $alpha: 1);
       }
 
       .separator::before {
         content: "1";
         position: absolute;
         font-size: 10px;
+        color: white;
         transform: translate(-5px, 15px);
       }
       .separator::after {
         content: "2";
+        color: white;
         position: absolute;
         font-size: 10px;
         transform: translate(0, 15px);
